// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots renderers/TimeFilter default 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
            id="QuickSelectPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--iconRight euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <div
                    aria-hidden="true"
                    className="euiButtonEmpty__icon"
                    data-euiicon-type="arrowDown"
                    size="m"
                  />
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <div
                      data-euiicon-type="clock"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <button
                className="euiSuperDatePicker__prettyFormat"
                data-test-subj="superDatePickerShowDatesButton"
                disabled={false}
                onClick={[Function]}
              >
                Last 1 year
                <span
                  className="euiSuperDatePicker__prettyFormatLink"
                >
                  Show dates
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with absolute time bounds 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
            id="QuickSelectPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--iconRight euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <div
                    aria-hidden="true"
                    className="euiButtonEmpty__icon"
                    data-euiicon-type="arrowDown"
                    size="m"
                  />
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <div
                      data-euiicon-type="clock"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <div
                className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiSuperDatePicker__startPopoverButton"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--start"
                    data-test-subj="superDatePickerstartDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="01/01/2019"
                  >
                    ~ 5 months ago
                  </button>
                </div>
              </div>
              <div
                className="euiText euiText--small euiDatePickerRange__delimeter"
              >
                <div
                  className="euiTextColor euiTextColor--subdued"
                >
                  →
                </div>
              </div>
              <div
                className="euiPopover euiPopover--anchorDownRight euiPopover--displayBlock"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--end"
                    data-test-subj="superDatePickerendDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="12/31/2019"
                  >
                    ~ in 7 months
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with commonlyUsedRanges 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
            id="QuickSelectPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--iconRight euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <div
                    aria-hidden="true"
                    className="euiButtonEmpty__icon"
                    data-euiicon-type="arrowDown"
                    size="m"
                  />
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <div
                      data-euiicon-type="clock"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <button
                className="euiSuperDatePicker__prettyFormat"
                data-test-subj="superDatePickerShowDatesButton"
                disabled={false}
                onClick={[Function]}
              >
                Last 30 days
                <span
                  className="euiSuperDatePicker__prettyFormatLink"
                >
                  Show dates
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with dateFormat 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
            id="QuickSelectPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--iconRight euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <div
                    aria-hidden="true"
                    className="euiButtonEmpty__icon"
                    data-euiicon-type="arrowDown"
                    size="m"
                  />
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <div
                      data-euiicon-type="clock"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <button
                className="euiSuperDatePicker__prettyFormat"
                data-test-subj="superDatePickerShowDatesButton"
                disabled={false}
                onClick={[Function]}
              >
                Last 24 hours
                <span
                  className="euiSuperDatePicker__prettyFormatLink"
                >
                  Show dates
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/TimeFilter with relative time bounds 1`] = `
<div
  style={
    Object {
      "width": "600px",
    }
  }
>
  <div
    className="canvasTimeFilter"
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--directionRow euiSuperDatePicker__flexWrapper euiSuperDatePicker__flexWrapper--noUpdateButton"
    >
      <div
        className="euiFlexItem"
      >
        <div
          className="euiFormControlLayout euiFormControlLayout--group euiSuperDatePicker"
        >
          <div
            className="euiPopover euiPopover--anchorDownLeft"
            id="QuickSelectPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor euiQuickSelectPopover__anchor"
            >
              <button
                aria-label="Date quick select"
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--iconRight euiFormControlLayout__prepend"
                data-test-subj="superDatePickerToggleQuickMenuButton"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <div
                    aria-hidden="true"
                    className="euiButtonEmpty__icon"
                    data-euiicon-type="arrowDown"
                    size="m"
                  />
                  <span
                    className="euiButtonEmpty__text euiQuickSelectPopover__buttonText"
                  >
                    <div
                      data-euiicon-type="clock"
                    />
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <div
              className="euiDatePickerRange euiDatePickerRange--inGroup"
            >
              <div
                className="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiSuperDatePicker__startPopoverButton"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--start"
                    data-test-subj="superDatePickerstartDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="now/w"
                  >
                    ~ 6 days ago
                  </button>
                </div>
              </div>
              <div
                className="euiText euiText--small euiDatePickerRange__delimeter"
              >
                <div
                  className="euiTextColor euiTextColor--subdued"
                >
                  →
                </div>
              </div>
              <div
                className="euiPopover euiPopover--anchorDownRight euiPopover--displayBlock"
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchStart={[Function]}
              >
                <div
                  className="euiPopover__anchor"
                >
                  <button
                    className="euiDatePopoverButton euiDatePopoverButton--end"
                    data-test-subj="superDatePickerendDatePopoverButton"
                    disabled={false}
                    onClick={[Function]}
                    title="now/w"
                  >
                    ~ in a day
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
